knextapp-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: myknappsvc-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: myknappod
