knextapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myknappsvc
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: myknappod
